--- a/payment.html
+++ b/payment.html
@@ -1,11 +1,11 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>Checking push</title>
+    <title>Payment</title>
 </head>
 <body>
-    <a href="payment.html">Pay</a>
+    Payment form
 </body>
 </html>
