--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title></title>
 </head>
 <body>
-    Demo project
+    <h1>Demo project</h1>
+    <footer>Copyright 2022</footer>
 </body>
 </html>
